bbguimaraes.com/main.css
body {
    background-color: black;
    font-family: Monospace;
    font-size: 16px;
    margin-left: 1em;
    margin-right: 1em;
    hyphens: auto;
}

.white-bg:not(.black-bg) {
    background-color: white;
    color: #444444;
}

.no-margin {
    margin-left: 0;
    margin-right: 0;
}

.black-bg {
    background-color: black;
}

.roman {
    font-family: Palatino, 'Times New Roman', Times, serif;
    font-size: 18px;
}

.hidden {
    visibility: hidden;
}

.small-div {
    width: 38.2%;
    margin-top: 2em;
    margin-bottom: 2em;
}

body, a, select {
    color: #a0a0a0;
}

a:visited {
    color: #606060;
}

select {
    background-color: transparent;
    border-color: #a0a0a0;
    border-style: solid;
    border-width: 2px;
}

details > summary {
    cursor: pointer;
}

blockquote {
    position: relative;
    padding-left: 1em;
}

blockquote::before {
    content: '“';
    font-size: 4em;
    font-style: normal;
    filter: brightness(40%);
    position: absolute;
    top: -0.2em;
    left: -0.4em;
}

code {
    font-weight: bold;
}

pre {
    overflow: auto;
}

pre code {
    font-weight: normal;
}

figcaption {
    text-align: center;
}

#home {
    text-align: center;
}

#home #logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
}

#home nav {
    display: inline-block;
    text-align: left;
    font-size: 2rem;
    list-style-position: inside;
    cursor: default;
}

@media(max-width: 800px) {
    body {
        font-size: calc(8px + 1vw);
    }

    .roman {
        font-size: calc(10px + 1vw);
    }

    #home nav {
        font-size: 4vw;
    }
}

#home nav a {
    text-decoration: none;
}

#home nav a span:first-child {
    text-decoration: underline;
}

#home nav span:nth-child(2) {
    font-size: 67%;
    font-style: italic;
    vertical-align: middle;
    opacity: 0.5;
    transition: opacity 0.15s ease-in-out;
}

#home nav a:hover span:last-child {
    text-shadow: #606060 2px 2px 20px;
}

@media(hover: hover) and (pointer: fine) {
    #home nav span:nth-child(2) {
        opacity: 0;
    }

    #home nav:hover span:last-child {
        opacity: 0.5;
    }
}

#home nav a:hover span:last-child {
    opacity: 1;
}

#home nav ul {
    padding-left: 0;
}

#home nav li {
    margin-bottom: 0;
}

#home nav ul {
    list-style-type: none;
}

#home nav ul ul li::before {
    content: '├─';
}

#home nav ul ul li:last-child::before {
    content: '└─';
}

#home nav ul ul ul li::before {
    content: '\00a0\00a0  ├─';
}

#home nav ul ul li:not(:last-child) ul li::before {
    content: '│\00a0  ├─';
}

#home nav ul ul li:not(:last-child) ul li:last-child::before {
    content: '│\00a0  └─';
}

#home nav ul ul li:last-child ul li:last-child::before {
    content: '\00a0  \00a0└─';
}

#home nav :not(li) > ul {
    list-style-type: none;
    padding-left: 0;
}

#home nav :not(li) > ul > li {
    margin-bottom: 1em;
}

#page-nav {
    display: inline-block;
    box-sizing: border-box;
    min-height: 32px;
    width: 100%;
    line-height: 32px;
    margin-bottom: 0.5em;
    margin-top: 1.5em;
}

body.no-margin #page-nav {
    padding-left: 1em;
    padding-right: 1em;
}

#page-nav img {
    display: inline-block;
    margin: 0;
    max-width: 100%;
    vertical-align: middle;
}

#page-nav #logo {
    width: 16px;
    height: 16px;
}

#page-nav .nav-opt {
    float: right;
    margin-left: 1em;
}

#page-nav select {
    margin-right: 1em;
    border-width: 1px;
    border-style: none none dotted none;
}

#page-nav select:invalid, #page-nav select option[value="x"]{
    font-style: italic;
}

#page-nav #rss-icon {
    float: right;
}

.w80, body.w80:not(.no-margin) {
    max-width: 80ch;
    margin-left: auto;
    margin-right: auto;
}

@media (max-width: 80ch) {
    body.w80:not(.no-margin) {
        margin-left: 1em;
        margin-right: 1em;
    }
}

